--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "grunt": "~0.4.2",
     "grunt-contrib-concat": "~0.3.0",
-    "grunt-processhtml": "~0.3.0"
+    "grunt-processhtml": "~0.3.0",
+    "grunt-contrib-copy": "~0.5.0"
   },
   "repository": {
     "type": "git",
