--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,16 @@
 name: sefarad
 version: 1.0.0
 dependencies:
-  angular: 1.0.0
+  polymer: any
+  angular: 1.1.0
   browser: any
   http_server: '>=0.9.3 <0.10.0'
-  web_components: '>=0.8.0 <0.9.0'
+  web_components: '>=0.8.0 <0.11.0'
+  core_elements: ">=0.5.0 <0.7.0"
+  paper_elements: ">=0.6.0 <0.7.0"
 dev_dependencies:
   mock: '>=0.11.0+2 <0.12.0'
-  unittest: '>=0.11.0+5 <0.12.0'
+  unittest: '>=0.11.0+5 <0.13.0'
 transformers:
 - angular:
     html_files:
