--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,9 +8,6 @@ dependencies:
   web_components: '>=0.8.0 <0.11.0'
   mongo_dart: any
 dev_dependencies:
-  mock: '>=0.11.0+2 <0.12.0'
   unittest: '>=0.11.0+5 <0.13.0'
 transformers:
-- angular:
-    html_files:
-      - web/newquery.dart
+- angular
