--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,6 +4,7 @@ dependencies:
   polymer: any
   angular: 1.1.0
   browser: any
+  google_oauth2_client: '>=0.4.1 <0.5.0'
   http_server: '>=0.9.3 <0.10.0'
   web_components: '>=0.8.0 <0.11.0'
   mongo_dart: any
