sefarad light version

--- a/bower.json
+++ b/bower.json
@@ -8,22 +8,23 @@
   "main": "",
   "license": "MIT",
   "dependencies": {
-    "polymer": "polymer#1.1.0",
-    "google-chart-elasticsearch": "google-chart-elasticsearch#1dd3327a16",
-    "number-chart": "number-chart#dcc348af5d",
+    "paper-card": "PolymerElements/paper-card#^1.1.4",
+    "polymer": "polymer#*",
+    "google-chart-elasticsearch": "google-chart-elasticsearch#*",
+    "number-chart": "number-chart#*",
     "yasgui-polymer": "yasgui-polymer#*",
-    "paper-card": "paper-card#^0.1.5",
-    "material-search": "material-search#4b051bf2e1",
-    "leaflet-maps": "leaflet-maps#2.1.0",
-    "page-drawer-panel": "paper-drawer-panel#1.0.11",
-    "paper-tabs": "paper-tabs#1.8.0",
-    "iron-pages": "iron-pages#1.0.8",
-    "paper-toast": "paper-toast#1.3.0",
-    "paper-dialog-scrollable":"paper-dialog-scrollable#1.1.5",
-    "reviews-table": "reviews-table#c932bdbfc4",
-    "paper-item": "paper-item#1.2.1",
-    "paper-menu": "paper-menu#1.2.2",
-    "paper-dialog": "paper-dialog#1.1.0",
-    "paper-scroll-header-panel": "paper-scroll-header-panel#1.0.16"
+    "material-search": "material-search#*",
+    "leaflet-maps": "leaflet-maps#*",
+    "paper-drawer-panel": "paper-drawer-panel#*",
+    "paper-tabs": "paper-tabs#*",
+    "iron-pages": "iron-pages#*",
+    "paper-toast": "paper-toast#*",
+    "paper-dialog-scrollable":"paper-dialog-scrollable#*",
+    "reviews-table": "reviews-table#*",
+    "paper-item": "paper-item#*",
+    "paper-menu": "paper-menu#*",
+    "paper-dialog": "paper-dialog#*",
+    "paper-scroll-header-panel": "paper-scroll-header-panel#*",
+    "page": "page#*"
   }
 }
