--- a/luigi/Dockerfile
+++ b/luigi/Dockerfile
@@ -4,6 +4,6 @@ RUN pip install luigi elasticsearch rdflib requests
 
 WORKDIR /usr/src/app
 
-ADD ./luigi /usr/src/app
+ADD . /usr/src/app
 
 ENTRYPOINT ["python","-m","luigi"]
