--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "elasticsearch/elasticsearch-docker"]
 	path = elasticsearch/elasticsearch-docker
 	url = git@github.com:enriquecs/elasticsearch-docker.git
+[submodule "elements/dashboard-tourpedia"]
+	path = elements/dashboard-tourpedia
+	url = https://lab.cluster.gsi.dit.upm.es/sefarad/dashboard-tourpedia.git
