--- a/bower.json
+++ b/bower.json
@@ -1,29 +1,46 @@
 {
-  "name": "sefarad",
-  "homepage": "https://lab.cluster.gsi.dit.upm.es/sefarad/sefarad",
-  "authors": [ "GSI-UPM" ],
-  "description": "",
-  "main": "",
-  "license": "MIT",
+  "name": "Sefarad",
+  "authors": [
+    "gsi-upm"
+  ],
+  "description": "Sefarad framework demo",
+  "main": "index.html",
+  "keywords": [
+    "dashboard",
+    "web-component",
+    "elasticsearch",
+    "polymer"
+  ],
   "dependencies": {
-    "paper-card": "PolymerElements/paper-card#1.1.4",
-    "polymer": "polymer#1.7.0",
-    "paper-drawer-panel": "paper-drawer-panel#1.0.3",
-    "paper-tabs": "paper-tabs#1.0.1",
-    "iron-pages": "iron-pages#1.0.2",
-    "paper-toast": "paper-toast#1.0.0",
-    "paper-dialog-scrollable":"paper-dialog-scrollable#1.0.1",
-    "reviews-table": "reviews-table#*",
-    "paper-item": "paper-item#1.0.2",
-    "paper-menu": "paper-menu#1.0.1",
-    "paper-dialog": "paper-dialog#1.0.1",
-    "paper-scroll-header-panel": "paper-scroll-header-panel#1.0.6",
-    "page": "page#1.6.3",
-    "dashboard-tourpedia": "dashboard-tourpedia#*",
-    "dashboard-ftt":"dashboard-ftt#*",
-    "dashboard-aspects": "dashboard-aspects#*"
+    "paper-tabs": "paper-tabs#1.1.0",
+    "iron-pages": "PolymerElements/iron-pages#1.0.2",
+    "iron-icons": "PolymerElements/iron-icons#^1.0.0",
+    "paper-icon-button": "PolymerElements/paper-icon-button#^1.0.0",
+    "paper-drawer-panel": "PolymerElements/paper-drawer-panel#^1.0.0",
+    "paper-scroll-header-panel": "PolymerElements/paper-scroll-header-panel#^1.0.0",
+    "paper-toolbar": "PolymerElements/paper-toolbar#^1.0.0",
+    "paper-card": "PolymerElements/paper-card#^1.0.0",
+    "paper-item": "PolymerElements/paper-item#^1.0.0",
+    "paper-menu": "PolymerElements/paper-menu#^1.0.0",
+    "paper-header-panel": "PolymerElements/paper-header-panel#^1.0.0",
+    "paper-toast": "PolymerElements/paper-toast#^1.0.0",
+    "paper-dialog-scrollable": "PolymerElements/paper-dialog-scrollable#^1.0.0",
+    "polymer": "Polymer/polymer#1.7.0",
+    "paper-material": "paper-material#*",
+    "webcomponentsjs": "< 1.0.0",
+    "paper-button": "PolymerElements/paper-button#1.0.14",
+    "number-chart": "number-chart#*",
+    "google-chart-elasticsearch": "google-chart-elasticsearch#^1.1.3",
+    "entities-chart-ld": "entities-chart-ld#*",
+    "social-media-chart": "social-media-chart#0.0.2",
+    "paper-dialog":"paper-dialog#1.1.0",
+    "dashboard-tourpedia": "dashboard-tourpedia#*"
   },
   "resolutions": {
-    "webcomponentsjs": "0.7.24"
-  }
+    "webcomponentsjs": "0.7.24",
+    "elastic.js": "^1.2.0",
+    "polymer":"1.7.0"
+  },
+  "license": "Apache-2.0",
+  "homepage": "https://lab.cluster.gsi.dit.upm.es/sefarad/demo-dashboard"
 }
